--- a/assets/style.css
+++ b/assets/style.css
@@ -118,7 +118,7 @@ p {
 }
 
 .middle-content-1-img {
-    width: 100%;
+    width: 50%;
     display: flex;
     justify-content: center;
 }
@@ -226,12 +226,11 @@ p {
 }
 
 .item-section-2 {
-    width: fit-content;
-    height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border: 1px solid white;
 }
 
 .section-2-imgs {
@@ -241,10 +240,11 @@ p {
 .item-section-2:hover .section-2-imgs {
     border: 1px solid var(--color-1);
     border-color: var(--color-1);
+    transform: scale(1.1);
 }
 
 .item-section-2:hover .button-item-section-2 {
-    display: block;
+    visibility: visible;
 }
 
 .button-item-section-2 {
@@ -261,8 +261,8 @@ p {
     cursor: pointer;
     user-select: none;
     text-decoration: none;
-    display: none;
     text-transform: uppercase;
+    visibility: hidden;
 }
 
 .section-3-button {
